// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MacroList component should render active and disabled macros 1`] = `
<div
  class="component component"
>
  <div
    class="item"
  >
    Pizza Pepperoni
    <span
      class="material-icons automated"
    >
      auto_awesome
    </span>
  </div>
  <div
    class="item active"
  >
    Pizza Capricciosa
  </div>
  <div
    class="item disabled"
  >
    Pizza Margherita
  </div>
</div>
`;

exports[`MacroList component should render the macro list 1`] = `
<div
  class="component component"
>
  <div
    class="item active"
  >
    Pizza Pepperoni
    <span
      class="material-icons automated"
    >
      auto_awesome
    </span>
  </div>
  <div
    class="item"
  >
    Pizza Capricciosa
  </div>
  <div
    class="item"
  >
    Pizza Margherita
  </div>
</div>
`;

exports[`MacroList component should send event to segment on send 1`] = `
[
  [
    "macro-applied-searchbar",
    {
      "is_recommended": false,
      "macro_id": 2,
      "rank": undefined,
      "user_id": 2,
    },
  ],
]
`;
